# Evidence-AI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  vercel.json
.github/workflows/: ci-backend.yml  ci-frontend.yml
apps/api/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  ruff.toml
apps/api/src/evidence_ai/application/ports/: ai_reasoner.py  cache.py  content_fetcher.py  event_publisher.py  job_queue.py  search_provider.py  unit_of_work.py
apps/api/src/evidence_ai/application/ports/repositories/: user_repository.py  verification_repository.py
apps/api/src/evidence_ai/application/use_cases/: authenticate_user.py  create_verification.py  register_user.py  verify_content.py
apps/api/src/evidence_ai/config/: container.py  settings.py  source_registry.py
apps/api/src/evidence_ai/domain/entities/: __init__.py  claim.py  evidence.py  manipulation_signal.py  report.py  source.py  user.py  verification.py
apps/api/src/evidence_ai/domain/services/: confidence_calculator.py
apps/api/src/evidence_ai/domain/value_objects/: __init__.py  claim_type.py  confidence_score.py  manipulation_signal.py  source_tier.py  source_type.py  stance.py  verification_status.py
apps/api/src/evidence_ai/infrastructure/ai/: claude_reasoner.py  prompt_loader.py
apps/api/src/evidence_ai/infrastructure/ai/prompts/: detect_manipulation.md  extract_claims.md  generate_queries.md  reason_evidence.md
apps/api/src/evidence_ai/infrastructure/auth/: jwt_service.py  password_hasher.py
apps/api/src/evidence_ai/infrastructure/cache/: redis_cache.py
apps/api/src/evidence_ai/infrastructure/events/: arq_job_queue.py  inprocess_job_queue.py  redis_event_publisher.py
apps/api/src/evidence_ai/infrastructure/fetchers/: readability_fetcher.py  ssrf_guard.py  youtube_fetcher.py
apps/api/src/evidence_ai/infrastructure/migrations/: env.py
apps/api/src/evidence_ai/infrastructure/migrations/versions/: 20260626_0001_initial_schema.py  20260629_0002_seed_guest_user.py
apps/api/src/evidence_ai/infrastructure/observability/: logging.py
apps/api/src/evidence_ai/infrastructure/persistence/: database.py  unit_of_work.py
apps/api/src/evidence_ai/infrastructure/persistence/mappers/: __init__.py  user_mapper.py  verification_mapper.py
apps/api/src/evidence_ai/infrastructure/persistence/models/: __init__.py  audit_log_model.py  base.py  claim_model.py  evidence_model.py  manipulation_signal_model.py  report_model.py  source_model.py  user_model.py  verification_event_model.py  verification_model.py
apps/api/src/evidence_ai/infrastructure/persistence/repositories/: sql_user_repository.py  sql_verification_repository.py
apps/api/src/evidence_ai/infrastructure/search/: duckduckgo_provider.py
apps/api/src/evidence_ai/interfaces/http/: app.py  dependencies.py
apps/api/src/evidence_ai/interfaces/http/middleware/: error_handler.py  request_id.py
apps/api/src/evidence_ai/interfaces/http/routers/: auth.py  health.py  stream.py  verifications.py
apps/api/src/evidence_ai/interfaces/http/schemas/: auth_schemas.py  report_schemas.py  verification_schemas.py
apps/api/src/evidence_ai/interfaces/worker/: arq_worker.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PROMPTS.md  SECURITY.md  USAGE.md
docs/DECISIONS/: 0001-monorepo.md  0002-pgvector-vs-qdrant.md  0003-arq-vs-celery.md  0004-render-vs-railway.md  0005-clean-architecture.md  0006-sse-vs-websockets.md
infra/docker/: docker-compose.yml
scripts/: dev-up.ps1  dev-up.sh  generate-types.sh
(+31 files in other folders)
