[project]
name = "evidence-ai-api"
version = "0.1.0"
description = "Evidence AI — Backend (FastAPI + arq worker)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../../LICENSE" }
authors = [{ name = "Evidence AI Contributors" }]

dependencies = [
  # Web framework
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "sse-starlette>=2.1.3",

  # Validación y settings
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "email-validator>=2.2.0",

  # Persistencia
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",

  # Cache + cola
  "redis[hiredis]>=5.0.0",
  "arq>=0.26.0",

  # HTTP
  "httpx>=0.27.0",
  "tenacity>=9.0.0",

  # IA
  "anthropic>=0.39.0",

  # Búsqueda y scraping
  "duckduckgo-search>=6.3.0",
  "trafilatura>=1.12.0",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
  "youtube-transcript-api>=0.6.2",
  "pypdf>=5.0.0",

  # Auth
  "argon2-cffi>=23.1.0",
  "pyjwt[crypto]>=2.9.0",
  "authlib>=1.3.0",

  # NLP utilities
  "langdetect>=1.0.9",

  # Observabilidad
  "structlog>=24.4.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "prometheus-client>=0.21.0",

  # Rate limiting
  "slowapi>=0.1.9",

  # Dependency injection
  "dependency-injector>=4.42.0",

  # i18n
  "babel>=2.16.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "testcontainers[postgresql,redis]>=4.8.0",
  "anyio>=4.6.0",
  "respx>=0.21.0",
  "factory-boy>=3.3.0",
  "freezegun>=1.5.0",

  # Lint / format / types
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "import-linter>=2.1",

  # Pre-commit local
  "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_ai"]

# ─────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=evidence_ai",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
]
markers = [
  "slow: tests lentos (integración con servicios externos)",
  "integration: requiere servicios externos (DB, Redis)",
  "e2e: tests end-to-end completos",
]

# ─────────────────────────────────────────────
# mypy
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "src/evidence_ai/infrastructure/migrations/"]

[[tool.mypy.overrides]]
module = ["duckduckgo_search.*", "readability.*", "trafilatura.*", "youtube_transcript_api.*"]
ignore_missing_imports = true

# ─────────────────────────────────────────────
# import-linter: hace cumplir Clean Architecture
# ─────────────────────────────────────────────
[tool.importlinter]
root_package = "evidence_ai"

[[tool.importlinter.contracts]]
name = "Las capas no pueden romperse"
type = "layers"
layers = [
  "evidence_ai.interfaces",
  "evidence_ai.infrastructure",
  "evidence_ai.application",
  "evidence_ai.domain",
]

[[tool.importlinter.contracts]]
name = "Domain es puro — sin frameworks"
type = "forbidden"
source_modules = ["evidence_ai.domain"]
forbidden_modules = [
  "fastapi",
  "sqlalchemy",
  "anthropic",
  "httpx",
  "redis",
  "alembic",
]
